#107.130 PL API, swagger Standard Response Structure
